# rfid_media_player

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Readme.md  build_docker_image.sh  tarpaulin-report  tarpaulin-report.html
media_player/: Cargo.toml  Cross.toml  Dockerfile  Readme.md
media_player/src/: audiolib.rs  error.rs  lib.rs  mediaplayer.rs  track.rs
media_player/src/rodiolib/: mod.rs
media_player/tests/: integration_tests.rs  random.flac
media_player_test/: Cargo.toml
media_player_test/src/: main.rs
rfid_media_player/: 50-usb-rfid-reader.rules  Cargo.toml  Readme.md  coredump_analysis.md  rfid_media_player.service  tracks.yaml
rfid_media_player/src/: cli_app.rs  error.rs  lib.rs  logging.rs  main.rs  rfidmediaplayer.rs
rfid_reader/: Cargo.toml  LICENSE  Readme.md
rfid_reader/examples/: print_value.rs
rfid_reader/src/: error.rs  humbleusbdevice.rs  id.rs  keymap.rs  keymaperror.rs  lib.rs  libusbutils.rs  neuftechkeymap.rs  neuftechusbreader.rs  rawusbreader.rs  rfidreader.rs  rusbutils.rs  usbreader.rs
rfid_reader/src/neuftech/: keymap.rs  mod.rs  usbreader.rs
rfid_reader/src/rusb/: mod.rs  rusbhumbleusbdevice.rs  utils.rs
rfid_reader_test/: output.txt
track_store/: Cargo.toml  LICENSE  Readme.md
track_store/src/: error.rs  id.rs  lib.rs  trackpath.rs  trackstore.rs
usb_reader_test/: Cargo.toml  Readme.md  rfid_lsusb.output
usb_reader_test/src/: main.rs
