[package]
name = "media_player"
version = "1.0.0"
authors = ["rusty-octopus <rustyoctopus@posteo.org>"]
edition = "2018"
license = "MIT"
readme = "Readme.md"
description = "Crate for playing audio tracks."
repository = ""
homepage = ""
categories = [""]
keywords = ["audio"]

[dependencies]
rodio = "0.13.0"

[dev-dependencies]
cpal = "0.13.1"
