[package]
name = "rfid_reader"
version = "1.0.0"
authors = ["rusty-octopus <octopus@posteo.net>"]
edition = "2018"
license = "MIT"
readme = "Readme.md"
description = "Crate for reading RFID values from RFID reader that behave like keyboards"
repository = ""
homepage = ""
categories = [""]
keywords = ["usb", "rfid"]

[dependencies]
rusb = "0.6.5"
