[package]
name = "track_store"
version = "1.0.0"
authors = ["rusty-octopus <rustyoctopus@posteo.org>"]
edition = "2018"
license = "MIT"
readme = "Readme.md"
description = "Crate for a track store that enables getting the path of a track by its id."
repository = ""
homepage = ""
categories = [""]
keywords = ["yaml"]

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_yaml = "0.8.14"